Change password feature fully implemented

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,4 +1,4 @@
 NotBlank=This field is mandatory!
 Size.userForm.password=Password must be between 4 and 32 characters!
 Diff.userForm.confirmPassword=These passwords don't match!
-Diff.userForm.wrongPassword=The password doesn't match!
+Diff.userForm.wrongPassword=Wrong password!
