--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.18</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
