Add custom configuration properties handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.servlet.context-path=/Weightlifting_Log
+server.servlet.application-display-name=Weightlifting Log
 spring.thymeleaf.cache=false
 spring.main.allow-bean-definition-overriding=true
 spring.messages.basename=validation
@@ -12,7 +13,8 @@ spring.servlet.multipart.max-request-size=100MB
 ########## Datasource Properties ###########
 
 spring.datasource.username=********
-spring.datasource.url=********
+spring.datasource.url=jdbc:mysql://localhost:3306/weightlifting_log?&useUnicode=true&\
+  useJDBCCompliantTimezoneShift=true&amp&LegacyDatetimeCode=false&serverTimezone=EET
 spring.datasource.password=********
 
 ########## JPA Properties ###########
