Clean up model classes

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <version>2.3.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.pjm77</groupId>
+    <groupId>com.panpawelw</groupId>
     <artifactId>weightlifting-log</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
