--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,11 @@
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.sendinblue</groupId>
+            <artifactId>sib-api-v3-sdk</artifactId>
+            <version>5.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
