--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,7 @@ spring.servlet.multipart.max-request-size=100MB
 ########## Datasource Properties ###########
 
 spring.datasource.username=********
-spring.datasource.url=jdbc:mysql://localhost:3306/weightlifting_log?&useUnicode=true&\
-  useJDBCCompliantTimezoneShift=true&amp&LegacyDatetimeCode=false&serverTimezone=EET
+spring.datasource.url=********
 spring.datasource.password=********
 
 ########## JPA Properties ###########
@@ -23,13 +22,17 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 
+########## Sendinblue Mail Properties ##########
+
+sendinblue.mail.apikey=********
+
 ########## Spring Mail Properties (Amazon SES) ###########
 
 spring.mail.host=********
 spring.mail.username=********
 spring.mail.password=********
 spring.mail.properties.mail.transport.protocol=smtp
-spring.mail.properties.mail.smtp.port=587
+spring.mail.properties.mail.smtp.port=********
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
