Remove redundant AWSEmailService:
-remove service
-remove test
-remove unnecessary interface
-rename SendinblueEmailService to EmailService
-rename SendinblueEmailServiceTests to EmailServiceTests
-remove qualifier from RegistrationListener
-remove SES related configuration
-remove Spring Mail dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,20 +22,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 
-########## Sendinblue Mail Properties ##########
+########## Sendinblue Mail Properties
 
 sendinblue.mail.apikey=********
-
-########## Spring Mail Properties (Amazon SES) ###########
-
-spring.mail.host=********
-spring.mail.username=********
-spring.mail.password=********
-spring.mail.properties.mail.transport.protocol=smtp
-spring.mail.properties.mail.smtp.port=********
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
 
 ########## Spring Cloud & AWS Properties ###########
 
