Change validation messages and their styling

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,4 +1,7 @@
-NotBlank=This field is mandatory!
+NotBlank.password=Password field is mandatory!
+NotBlank.confirmPassword=Confirm password field is mandatory!
+NotBlank.oldPassword=Old password field is mandatory!
+NotBlank.oldConfirmPassword=Old confirm password field is mandatory!
 Size.userForm.password=Password must be between 4 and 32 characters!
-Diff.userForm.confirmPassword=These passwords don't match!
+Diff.userForm.confirmPassword=Passwords don't match!
 Diff.userForm.wrongPassword=Wrong password!
