--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,7 +1,7 @@
 NotBlank.password=Password field is mandatory!
 NotBlank.confirmPassword=Confirm password field is mandatory!
 NotBlank.oldPassword=Old password field is mandatory!
-NotBlank.oldConfirmPassword=Old confirm password field is mandatory!
-Size.userForm.password=Password must be between 4 and 32 characters!
-Diff.userForm.confirmPassword=Passwords don't match!
-Diff.userForm.wrongPassword=Wrong password!
+NotBlank.oldConfirmPassword=Confirm old password field is mandatory!
+Size.password=Password must be between 4 and 32 characters!
+Diff.confirmPassword=Passwords don't match!
+Diff.wrongPassword=Wrong password!
