Add validation messages

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -3,5 +3,8 @@ NotBlank.confirmPassword=Confirm password field is mandatory!
 NotBlank.oldPassword=Old password field is mandatory!
 NotBlank.oldConfirmPassword=Confirm old password field is mandatory!
 Size.password=Password must be between 4 and 32 characters!
+Size.confirmPassword=Password confirmation must be between 4 and 32 characters!
+Size.oldPassword=Old password must be between 4 and 32 characters!
+Size.oldConfirmPassword=Old password confirmation must be between 4 and 32 characters!
 Diff.confirmPassword=Passwords don't match!
 Diff.wrongPassword=Wrong password!
