--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.username=********
-spring.datasource.url=jdbc:mysql://localhost:3306/wl_tests?&useUnicode=true&\
-  useJDBCCompliantTimezoneShift=true&amp&LegacyDatetimeCode=false&serverTimezone=EET
-spring.datasource.password=********
+jdbc.driverClassName=org.h2.Driver
+jdbc.url=jdbc:h2:mem:testDb;DB_CLOSE_DELAY=-1
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.hbm2ddl.auto=create
