--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,36 @@
-jdbc.driverClassName=org.h2.Driver
-jdbc.url=jdbc:h2:mem:testDb;DB_CLOSE_DELAY=-1
-hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=create
+server.servlet.context-path=/weightliftinglog
+server.servlet.application-display-name=Weightlifting Log
+spring.thymeleaf.cache=false
+spring.main.allow-bean-definition-overriding=true
+spring.messages.basename=validation
+
+########## Multipart Properties ###########
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=100MB
+
+########## Datasource Properties ###########
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testDb;DB_CLOSE_DELAY=-1
+spring.datasource.username=test
+spring.datasource.password=test
+
+########## JPA Properties ###########
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+
+########## Sendinblue Mail Properties
+
+sendinblue.mail.apikey=********
+
+########## Spring Cloud & AWS Properties ###########
+
+cloud.aws.stack.auto=false
+cloud.aws.region.static=********
+cloud.aws.credentials.accessKey=********
+cloud.aws.credentials.secretKey=********
+cloud.aws.bucket.name=********
