Update h2, fix problems:
-update h2 dependency
-add MODE=LEGACY to database url
-fix SQL syntax errors

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -13,9 +13,9 @@ spring.servlet.multipart.max-request-size=100MB
 ########## Datasource Properties ###########
 
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testDb;DB_CLOSE_DELAY=-1
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.url=jdbc:h2:mem:testDb;MODE=LEGACY;DB_CLOSE_DELAY=-1
+spring.datasource.username=********
+spring.datasource.password=********
 
 ########## JPA Properties ###########
 
